--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,14 @@
             rel="noopener noreferrer"
             ><span class="header__name">websega</span></a
           >
+          <span>на</span>
+          <a
+            class="header__link"
+            href="https://unsplash.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><span class="header__name">Unsplash.com</span></a
+          >
         </div>
       </header>
 
