--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
               href="http://"
               target="_blank"
               rel="noopener noreferrer"
-              ><span class="header__name">websega</span></a
+              ><span class="header__name"></span></a
             >
             <span>на</span>
             <a
@@ -69,7 +69,7 @@
             <button class="tabs__tab" id="daily">Daily</button>
             <button class="tabs__tab" id="hourly">Hourly</button>
           </div>
-          
+
           <div class="forecast"></div>
         </div>
       </div>
